--- a/.gitignore
+++ b/.gitignore
@@ -111,4 +111,4 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# End of https://www.toptal.com/developers/gitignore/api/node
+# End of gitignore
